kubernetes/apps/flux-system/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-and-local-ingress
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
  egress:
    - toEntities:
        - host
        - remote-node
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
